--- a/editor.css
+++ b/editor.css
@@ -8,7 +8,6 @@ html, body {
 }
 #syntax, #write {
   font-family: 'Courier New', Courier, monospace; /*font*/
-  position:absolute;
   padding:0;
   margin:0;
   font-size: 20px; /*text size*/
@@ -18,6 +17,9 @@ html, body {
   height:auto;
   overflow:hidden;
   min-height: 50%;
+  position:fixed;
+  bottom:0;
+  right:0;
 }
 #write {
   background:transparent;
