--- a/editor.css
+++ b/editor.css
@@ -16,7 +16,10 @@ html, body {
   word-break:break-all; /*wrap*/
   height:auto;
   overflow:hidden;
+  font-kerning: none;
+  font-stretch:normal;
   letter-spacing: 1px; /*spacing*/
+  font-weight: 900; /*weight*/
   /*OK to remove*/
   min-height: 50%;
   position:fixed; /*OK to remove but replace with position:absolute;*/
