--- a/editor.css
+++ b/editor.css
@@ -22,7 +22,7 @@ html, body {
   font-weight: 200; /*weight*/
   /*OK to remove*/
   min-height: 50%;
-  position:fixed; /*OK to remove but replace with position:absolute;*/
+  position:absolute; /*OK to remove but replace with position:fixed;*/
   bottom:0;
   right:0;
   opacity:0.7;
