--- a/editor.css
+++ b/editor.css
@@ -7,7 +7,7 @@ html, body {
   background:#333;
 }
 #syntax, #write {
-  font-family: 'Courier New', Courier, monospace; /*font*/
+  font-family: monospace; /*font*/
   padding:0;
   margin:0;
   font-size: 20px; /*text size*/
