--- a/editor.css
+++ b/editor.css
@@ -5,6 +5,9 @@ html, body {
 #syntax {
   color:white; /*text color*/
   background:#333;
+
+  position:absolute; /*OK to remove but replace with position:fixed;*/
+  z-index: -1;
 }
 #syntax, #write {
   font-family: 'Courier New', Courier, monospace; /*font*/
@@ -20,9 +23,6 @@ html, body {
   font-stretch:normal;
   letter-spacing: 1px; /*spacing*/
   font-weight: 200; /*weight*/
-  /*OK to remove*/
-  min-height: 50%;
-  position:absolute; /*OK to remove but replace with position:fixed;*/
 }
 #write {
   background:transparent;
