--- a/editor.css
+++ b/editor.css
@@ -11,6 +11,7 @@
   margin:0;
   font-size: 20px; /*text size*/
   width:100%; /*width*/
+  min-height: 20vh; /*min height*/
   word-wrap:break-word; /*wrap*/
   word-break:break-all; /*wrap*/
   height:auto;
