--- a/editor.css
+++ b/editor.css
@@ -1,25 +1,7 @@
+/*AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA*/
 #syntax {
-  color:white; /*text color*/
-  background:#333;
-
   position:absolute; /*OK to remove but replace with position:fixed;*/
   z-index: -1;
-}
-#syntax, #write {
-  font-family: 'Courier New', Courier, monospace; /*font*/
-  padding:0;
-  margin:0;
-  font-size: 20px; /*text size*/
-  width:100%; /*width*/
-  min-height: 20vh; /*min height*/
-  word-wrap:break-word; /*wrap*/
-  word-break:break-all; /*wrap*/
-  height:auto;
-  overflow:hidden;
-  font-kerning: none;
-  font-stretch:normal;
-  letter-spacing: 1px; /*spacing*/
-  font-weight: 200; /*weight*/
 }
 #write {
   background:transparent;
@@ -27,18 +9,4 @@
   resize: none;
   outline:none;
   color:transparent;
-  caret-color: white; /*text color*/
-}
-/*Syntax Highlight*/
-.error {
-  text-decoration-line: underline;
-  text-decoration-style: wavy;
-  text-decoration-color: rgb(255,0,0);
-}
-.key {
-  padding:3px;
-  background:black;
-  color:white;
-  border-radius:20px;
-  font-size:15px;
 }
